<resources>
    <string name="app_name">Billing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">دسته بندی</string>
    <string name="income">درآمد</string>
    <string name="outcome">هزینه</string>
    <string name="pickCategory">یک دسته بندی انتخاب نمایید</string>
    <string name="price">قیمت</string>
    <string name="category">دسته بندی</string>
    <string name="title">عنوان</string>
    <string name="date">تاریخ</string>
</resources>